<resources>
    <string name="app_name">Funny Grasshopper</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="decrypt_text">Decrypt Text</string>
    <string name="decrypt_image">Decrypt Image</string>
    <string name="encrypt">Encrypt</string>
    <string name="enter_text">Enter text</string>
    <string name="load_imade">Load Imade</string>
    <string name="decrypt">Decrypt</string>
    <string name="enter_cipher">Enter cipher</string>
    <string name="copied_cipher">Cipher copied</string>
    <string name="ecrypt_without_stegano">Encrypt without stegano</string>
    <string name="encrypt_and_stegano_done">Encrypt and Stegano successful</string>
    <string name="enter_text_for_encrypt">Enter text for encrypt</string>
    <string name="saved">Saved</string>
    <string name="sd_not_found">SD-card not found</string>
    <string name="image_not_found">Image not found</string>
    <string name="element_of_layout_not_found">Element of lyaout not found</string>
    <string name="image_is_load">Image is loaded</string>
    <string name="image_cannot_be_decrypted">Image can\'t be decrypted</string>
    <string name="please_add_image">Please, add Image</string>
    <string name="text_copied">Text copied</string>
    <string name="delete_key">Delete key</string>
    <string name="enter_key">Enter key</string>
    <string name="remember_key">Remember key</string>
    <string name="save_key">Save Key</string>
    <string name="back">Back</string>
    <string name="add_text">Add Text</string>
    <string name="deleted_key">Key deleted</string>
    <string name="not_enter_key">You do not enter key</string>
    <string name="saves_keys">saves_key</string>
</resources>
