<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorVeryBlue">


    <EditText
        android:id="@+id/edit_text_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_key"
        android:inputType="textPersonName" />

    <CheckBox
        android:id="@+id/check_box_remember"
        style="@android:style/Widget.Holo.CompoundButton.CheckBox"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/remember_key" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@color/colorGrey"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/button_back"
            android:layout_width="match_parent"
            style="@android:style/Widget.Button.Inset"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="2dp"
            android:layout_height="wrap_content"
            android:background="@color/colorBlue"
            android:text="@string/back"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button_save"
            style="@android:style/Widget.Button.Inset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="@color/colorBlue"
            android:text="@string/save_key"
            android:layout_weight="1"/>


    </LinearLayout>
</LinearLayout>
