<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.lenovo.funnygrasshopper.Encrypt_Fragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorVeryBlue"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/linear_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorGrey">

            <Button
                android:id="@+id/button_load_image_encrypt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:background="@color/colorBlue"
                android:text="@string/load_imade"/>

            <Button
                android:id="@+id/button_encrypt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="2dp"
                android:background="@color/colorBlue"
                android:text="@string/encrypt"/>
        </LinearLayout>

        <EditText
            android:id="@+id/edit_text_for_encrypt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_text"
            android:inputType="textMultiLine"
            android:textSize="15dp"
            app:layout_constraintTop_toBottomOf="@id/linear_1"/>

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@id/edit_text_for_encrypt"/>

        <TextView
            android:id="@+id/text_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:textSize="15dp"
            app:layout_constraintTop_toBottomOf="@id/edit_text_for_encrypt" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>
